# portableproplib

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  bootstrap  configure.ac  proplib.pc.in
include/: Makefile.am  prop_array.h  prop_data.h  prop_dictionary.h  prop_stack.h  rbtree.h
include/prop/: Makefile.am  prop_array.h  prop_bool.h  prop_data.h  prop_dictionary.h  prop_number.h  prop_string.h
man/: Makefile.am  prop_array.3  prop_array_util.3  prop_dictionary.3  prop_number.3  proplib.3
src/: Makefile.am  libprop.sym  prop_array.c  prop_array.h  prop_array_util.c  prop_bool.c  prop_bool.h  prop_data.c  prop_data.h  prop_dictionary.c  prop_dictionary.h  prop_dictionary_util.c  prop_ingest.c  prop_ingest.h  prop_number.c  prop_number.h  prop_object.c  prop_object.h  prop_object_impl.h  prop_rb.c  prop_rb_impl.h  prop_stack.c  prop_stack.h  prop_string.c  prop_string.h  prop_zlib.c  proplib.3  proplib.h  rb.c
